--- a/style.css
+++ b/style.css
@@ -3,5 +3,90 @@
 /* Common style */
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #F3F1FF;
+    margin-left: 6.5%;
+    margin-right: 6.5%;
 }
+/* 
+--------------First section Design-----------
+ */
+.container {
+    border:2px solid;
+    background-color: #161616;
+    width: 1321px;
+    height: 646px;
+    border-radius: 30px;
+    
+   margin-top: 3%;
+   margin-bottom: 5%;
+}
+.first-section{
+    display: flex;
+    justify-content: space-evenly;
+ 
+}
+.titel {
+    width: 531px;
+    height: 424px;
+    color:#FFFFFF ;
+  
+    
+}
+.titel h1{
+    font-size: 4.375em;
+
+}
+.small-text{
+font-size: 1em;
+margin-top: -10%;
+padding-bottom: 1%;
+}
+button{
+    background-color: red;
+    border: 2px solid red;
+    border-radius: 5px;
+    padding: 0 6%;
+    
+}
+button a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 1.25em;
+}
+.img-banner{
+    width: 581px;
+    height: 631px;
+
+}
+.img-banner img{
+    width: 100%;
+    padding-top: 6%;
+}
+ /*---------------------------
+ 
+      Second Secton Design 
+  
+ ------------------------------*/
+ .manu{
+    border: 2px solid;
+    background: #161616;
+        border-radius: 10px;
+        height: 312px;
+        width: 312px;
+        
+ }
+ .manu-section{
+  
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 5%;
+    margin: 10%;
+    text-align: center;
+
+ }
+ .manu-section a{
+    text-decoration: none;
+    font-size: 1.25em;
+ }
+ .color{
+    background-color: red;
+ }
