--- a/upcomming/upcomming.css
+++ b/upcomming/upcomming.css
@@ -1,6 +1,189 @@
 @import url('https://fonts.googleapis.com/css2?family=Arima:wght@100&family=Crimson+Text&family=Merriweather+Sans:wght@300&family=Poppins:ital,wght@0,400;1,500&family=The+Nautigal:wght@700&display=swap');
 
-Common style
+/* Common style */
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+
+}
+
+.body-for-margin {
+    margin-left: 6.5%;
+    margin-right: 6.5%;
+}
+
+/* 
+--------------First section Design-----------
+ */
+.container {
+    border: 2px solid;
+    background-color: #161616;
+    width: 1321px;
+    height: 646px;
+    border-radius: 30px;
+
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
+.first-section {
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.titel {
+    width: 531px;
+    height: 424px;
+    color: #FFFFFF;
+
+
+}
+
+.titel h1 {
+    font-size: 4.375em;
+
+}
+
+.small-text {
+    font-size: 1em;
+    margin-top: -10%;
+    padding-bottom: 1%;
+}
+
+button {
+    background-color: red;
+    border: 2px solid red;
+    border-radius: 5px;
+    padding: 0 6%;
+
+}
+
+button a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 1.25em;
+}
+
+.img-banner {
+    width: 581px;
+    height: 631px;
+
+}
+
+.img-banner img {
+    width: 100%;
+    padding-top: 6%;
+}
+
+/*---------------------------
+ 
+      Second Secton Design 
+  
+ ------------------------------*/
+/* Manu Section */
+.manu {
+    border: 2px solid;
+    background: #161616;
+    border-radius: 10px;
+    height: 312px;
+    width: 312px;
+
+}
+
+.manu-section {
+
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 5%;
+    margin: 10%;
+    text-align: center;
+
+}
+
+.manu-section a {
+    text-decoration: none;
+    font-size: 1.25em;
+    color: #161616;
+}
+
+.color {
+    background-color: red;
+}
+
+/* Blog Section */
+.section2 {
+    display: flex;
+
+}
+
+.match-flag {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
+    padding-left: 2%;
+    margin-bottom: 10%;
+
+}
+
+.flag-banner {
+    border: 2px solid rgba(128, 128, 128, 0.09);
+    border-radius: 10px;
+width: 312px;
+    height: 242px;
+}
+.flag-match{
+    display: flex;
+    justify-content:space-around;
+    padding-top: 15% ;
+   
+}
+.ban-titel h3 {
+    text-align: center;
+}
+
+
+.time {
+    
+    text-align: center;
+    
+
+}
+
+
+footer {
+    width: 100%;
+    height: 444px;
+    background-color: #161616;
+}
+
+footer h1 {
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 10%;
+}
+
+hr {
+    border: 1px solid #d1d1d142;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.footer-text {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 15%;
+    margin-right: 15%;
+    color: #FFFFFF;
+}
+
+.icon {
+    text-align: center;
+    font-size: 2em;
+}
+
+.icon a {
+    text-decoration: none;
+    margin: 5%;
 }
