--- a/upcomming/upcomming.css
+++ b/upcomming/upcomming.css
@@ -51,7 +51,7 @@ body {
 }
 
 button {
-width: 200px;
+    width: 200px;
     height: 80px;
 
     background-color: rgb(255, 0, 68);
@@ -61,6 +61,7 @@ width: 200px;
     outline: none;
     animation: button 5s 2s infinite;
 }
+
 @keyframes button {
     from {
         background-color: black;
@@ -74,7 +75,8 @@ width: 200px;
 button:hover {
     box-shadow: inset 300px 0 0 0 red;
     cursor: pointer;
-    color: aquamarine;}
+    color: aquamarine;
+}
 
 button a {
     text-decoration: none;
@@ -98,6 +100,7 @@ button a {
   
  ------------------------------*/
 /* Manu Section */
+/* Manu Section */
 .manu {
     border: 2px solid;
     background: #161616;
@@ -117,6 +120,12 @@ button a {
 
 }
 
+.manu-section:hover {
+    box-shadow: inset 300px 0 0 0 red;
+    cursor: pointer;
+
+}
+
 .manu-section a {
     text-decoration: none;
     font-size: 1.25em;
@@ -125,6 +134,20 @@ button a {
 
 .color {
     background-color: red;
+}
+
+.color:hover {
+    box-shadow: inset 300px 0 0 0 white;
+    cursor: pointer;
+}
+
+.color {
+    background-color: red;
+}
+
+color:hover {
+    box-shadow: inset 300px 0 0 0 white;
+    cursor: pointer;
 }
 
 /* Blog Section */
@@ -146,24 +169,26 @@ button a {
 .flag-banner {
     border: 2px solid rgba(128, 128, 128, 0.09);
     border-radius: 10px;
-width: 312px;
+    width: 312px;
     height: 242px;
 }
-.flag-match{
+
+.flag-match {
     display: flex;
-    justify-content:space-around;
-    padding-top: 15% ;
-   
+    justify-content: space-around;
+    padding-top: 15%;
+
 }
+
 .ban-titel h3 {
     text-align: center;
 }
 
 
 .time {
-    
+
     text-align: center;
-    
+
 
 }
 
@@ -203,6 +228,7 @@ hr {
     text-decoration: none;
     margin: 5%;
 }
+
 /* ---------------------
 
 
@@ -237,7 +263,6 @@ Media Queies
     .titel h1 {
         font-size: 1em;
         margin-left: 30%;
-        /* margin-right: 5%; */
         margin-top: 5%;
         padding-bottom: 10%;
 
@@ -287,30 +312,140 @@ Media Queies
     .manu-section a {
         font-size: .75em;
     }
-.match-flag{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    margin-bottom: 2%;
-}
-    .flag-banner{
-        
-    }
-    .section2{
-width: 280px;
-margin-left: 5%;
 
+    .match-flag {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 2%;
+    }
+
+}
+
+.section2 {
+    width: 280px;
+    margin-left: 5%;
+
+}
+
+footer {
+    height: 600px;
+    margin-top: 40%;
+
+}
+
+.footer-text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+/* ---------------------
+
+
+
+Media Queies 
+
+Tablet View
+
+
+
+
+-------------------------------------*/
+@media screen and (min-width:678px) and (max-width:768px) {
+
+    .container {
+        width: 734px;
+        height: 398px;
+        margin-right: 15%;
+        margin-left: -5%
+    }
+
+    .first-section {}
+
+
+
+    .titel h1 {
+        font-size: 1.75em;
+        margin-left: 10%;
+        margin-right: 5%;
+        margin-top: 5%;
+        padding-bottom: 10%;
+
+
+    }
+
+    .small-text {
+        font-size: 1em;
+        margin-left: 10%;
+        margin-right: 10%;
+
+    }
+
+    button {
+        width: 110px;
+        height: 40px;
+        font-size: .75rem;
+        margin-left: 10%;
+    }
+
+    .img-banner {
+
+        width: 50%;
+        padding-top: 10%;
+        margin-right: 2%;
+
+
+    }
+
+    .section2 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .manu {
+        border: none;
+        background-color: white;
+        display: flex;
+        flex-direction: row;
+        width: 500px;
+        height: 150px;
+        margin-left: -30%;
+        margin-bottom: 5%;
+
+    }
+
+    .manu-section {
+        padding: 0 15%;
+        /* padding: 2%; */
+        margin-right: -10%;
+    }
+
+    .manu-section a {
+        font-size: 1.25em;
+        text-align: center;
+    }
+
+    .match-flag {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 2%;
+        margin-left: -2%;
     }
 
     footer {
-        height: 600px;
-        margin-top: 40%;
+        height: 650px;
+        margin-top: 20%;
 
     }
 
     .footer-text {
         display: flex;
-        flex-direction: column;
-        text-align: center;
+        justify-content: space-evenly;
+        margin: 0 10px;
+    }
+
+    hr {
+        margin: 0 10px;
     }
 
 }
