--- a/style.css
+++ b/style.css
@@ -274,7 +274,6 @@ MObile View
     .small-text {
         font-size: .75em;
         margin-left: 30%;
-        margin-right: %;
 
     }
 
@@ -337,9 +336,9 @@ MObile View
         display: flex;
         flex-direction: column;
         text-align: center;
-    }
+    }}
 
-}
+
 
 /* ---------------------
 
@@ -362,9 +361,9 @@ Tablet View
         margin-left: -5%
     }
 
-    .first-section {
+    /* .first-section {
         margin-left: 10;
-    }
+    } */
 
 
 
