--- a/upcomming/upcomming.css
+++ b/upcomming/upcomming.css
@@ -3,14 +3,10 @@
 /* Common style */
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+margin: 0;
 
 }
 
-.body-for-margin {
-    margin-left: 6.5%;
-    margin-right: 6.5%;
-}
 
 /* 
 --------------First section Design-----------
@@ -152,7 +148,8 @@ button a {
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 2%;
     grid-row-gap: 2%;
-    margin-right: 2.5%;
+    margin-right: 8%;
+    margin-left: 2%;
 
 
 
@@ -184,7 +181,7 @@ button a {
     text-align: center;
 }
 footer {
-    width:1520px;
+    width:auto;
     height: 444px;
     background-color:#161616;
     margin-top: 10%;
@@ -221,7 +218,10 @@ hr {
     margin: 5%;
 }
 
-
+.body-for-margin {
+    margin-left: 8%;
+    margin-right: 6.5%;
+}
 
 
 
@@ -241,7 +241,8 @@ Media Queies
     .container {
         width: 334px;
         height: 520px;
-        margin-left: 1%;
+        margin-left: 3%;
+        margin-right: 5%;
     }
 
     .first-section {
@@ -328,8 +329,8 @@ Media Queies
 
 footer {
     height: 600px;
-    width: 415px;
-    margin-top: 40%;
+      margin-top:50%;
+    max-width: 678px;
 
 }
 
@@ -337,6 +338,10 @@ footer {
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+.body-for-margin {
+    margin-left: 2%;
+    margin-right:8%;
 }
 }
 
@@ -353,7 +358,7 @@ Tablet View
 
 
 -------------------------------------*/
-@media screen and (min-width:678px) and (max-width:768px) {
+@media screen and (min-width:678px) and (max-width:992px) {
 
     .container {
         width: 734px;
@@ -440,7 +445,7 @@ Tablet View
     }
 
     footer {
-        width: 760px;
+       max-width: 992px;
         height: 400px;
         margin-top:10%;
 
@@ -455,4 +460,8 @@ Tablet View
     hr {
         margin: 0 10px;
     }
+        .body-for-margin {
+            margin-left: 6%;
+            margin-right: 8%;
+        }
 }
