--- a/upcomming/upcomming.css
+++ b/upcomming/upcomming.css
@@ -261,7 +261,7 @@ Media Queies
     }
 
     .titel h1 {
-        font-size: 1em;
+        font-size: 2em;
         margin-left: 30%;
         margin-top: 5%;
         padding-bottom: 10%;
@@ -272,6 +272,9 @@ Media Queies
     .small-text {
         font-size: .75em;
         margin-left: 30%;
+        white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         /* margin-right: %; */
 
     }
